--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         </div>
         <div class="col-lg-6 pt-2">
           <div class="text-center pt-5">
-            <img src="assets/img/im.png" width="70%" alt="logo">
+            <img src="im.png" width="70%" alt="logo">
           </div>
         </div>
       </div>
@@ -101,7 +101,7 @@
         <div class="row pt-5">
           <div class="col-lg-6">
             <figure class="circle-bg">
-              <img src="assets/img/my-img.jpeg" width="65%" alt="Image" class="img-fluid">
+              <img src="my-img.jpeg" width="65%" alt="Image" class="img-fluid">
             </figure>
           </div>
           <div class="col-lg-5 ml-auto">
@@ -253,7 +253,7 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-title">Our Resume</h2>
-          <img src="assets/img/cv.jpg" width="60%" alt="cv">
+          <img src="cv.jpg" width="60%" alt="cv">
         </div>
       </div>
     </div>
@@ -266,7 +266,7 @@
       <div class="row">
         <div class="col-12 text-center" data-aos="fade">
           <h2 class="section-title pt-5">Our Certificate</h2>
-          <img src="assets/img/certificate.jpg" width="60%">
+          <img src="certificate.jpg" width="60%">
         </div>
       </div>
     </div>
@@ -365,14 +365,14 @@
 
 
   <!-- Vendor JS Files -->
-  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/vendor/php-email-form/validate.js"></script>
-  <script src="assets/vendor/aos/aos.js"></script>
-  <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
-  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
+  <script src="/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="/php-email-form/validate.js"></script>
+  <script src="/aos/aos.js"></script>
+  <script src="/glightbox/js/glightbox.min.js"></script>
+  <script src="/swiper/swiper-bundle.min.js"></script>
 
   <!-- Main JS File -->
-  <script src="assets/js/main.js"></script>
+  <script src="/main.js"></script>
 
 </body>
 
