--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
     integrity="sha512-SfTiTlX6kk+qitfevl/7LibUOeJWlt9rbyDn92a1DqWOw9vWG2MFoays0sgObmWazO5BQPiFucnnEAjpAB+/Sw=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <!-- Vendor CSS Files -->
-  <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="bootstrap.min.css" rel="stylesheet">
   <link href="bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
   <link href="aos/aos.css" rel="stylesheet">
-  <link href="/glightbox/css/glightbox.min.css" rel="stylesheet">
+  <link href="glightbox/css/glightbox.min.css" rel="stylesheet">
   <link href="swiper/swiper-bundle.min.css" rel="stylesheet">
 
   <!-- Main CSS File -->
