--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
 
       </div>
       <div class="credits">
-        Designed Developed and Promoted by <a href="https://www.webkeyindia.com">Shagunsingh</a>
+        Designed Developed and Promoted by <a href="https://index.html">Shagunsingh</a>
       </div>
     </div>
   </footer>
@@ -365,14 +365,14 @@
 
 
   <!-- Vendor JS Files -->
-  <script src="/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="/php-email-form/validate.js"></script>
-  <script src="/aos/aos.js"></script>
-  <script src="/glightbox/js/glightbox.min.js"></script>
-  <script src="/swiper/swiper-bundle.min.js"></script>
+  <script src="bootstrap.bundle.min.js"></script>
+  <script src="validate.js"></script>
+  <script src="aos.js"></script>
+  <script src="glightbox.min.js"></script>
+  <script src="swiper-bundle.min.js"></script>
 
   <!-- Main JS File -->
-  <script src="/main.js"></script>
+  <script src="main.js"></script>
 
 </body>
 
