--- a/index.html
+++ b/index.html
@@ -346,12 +346,11 @@
         <br>
       </div>
       <div class="social-links d-flex justify-content-center">
-        <a href="https://www.twitter.com/"><i class="bi bi-twitter-x main-icon"></i></a>
-        <a href="https://www.facebook.com/"><i class="bi bi-facebook main-icon"></i></a>
-        <a href="https://www.instagram.com/"><i class="bi bi-instagram main-icon"></i></a>
-        <a href="https://www.linkedin.com/"><i class="bi bi-linkedin main-icon"></i></a>
-        <a href="https://web.whatsapp.com/"><i class="fa fa-whatsapp main-icon" aria-hidden="true"></i></a>
-
+          <a href="https://www.twitter.com/"><i class="fa fa-twitter main-icon"></i></a>
+          <a href="https://www.facebook.com/"><i class="fa fa-facebook main-icon"></i></a>
+          <a href="https://www.instagram.com/"><i class="fa fa-instagram main-icon"></i></a>
+          <a href="https://www.linkedin.com/"><i class="fa fa-linkedin main-icon"></i></a>
+          <a href="https://web.whatsapp.com/"><i class="fa fa-whatsapp main-icon" aria-hidden="true"></i></a>
       </div>
       <div class="credits">
         Designed Developed and Promoted by <a href="https://index.html">Shagunsingh</a>
