--- a/index.html
+++ b/index.html
@@ -346,10 +346,10 @@
         <br>
       </div>
       <div class="social-links d-flex justify-content-center">
-          <a href="https://www.twitter.com/"><i class="fa fa-twitter main-icon"></i></a>
-          <a href="https://www.facebook.com/"><i class="fa fa-facebook main-icon"></i></a>
-          <a href="https://www.instagram.com/"><i class="fa fa-instagram main-icon"></i></a>
-          <a href="https://www.linkedin.com/"><i class="fa fa-linkedin main-icon"></i></a>
+          <a href="https://www.twitter.com/"><i class="fa fa-twitter main-icon" aria-hidden="true"></i></a>
+          <a href="https://www.facebook.com/"><i class="fa fa-facebook main-icon" aria-hidden="true"></i></a>
+          <a href="https://www.instagram.com/"><i class="fa fa-instagram main-icon" aria-hidden="true"></i></a>
+          <a href="https://www.linkedin.com/"><i class="fa fa-linkedin main-icon" aria-hidden="true"></i></a>
           <a href="https://web.whatsapp.com/"><i class="fa fa-whatsapp main-icon" aria-hidden="true"></i></a>
       </div>
       <div class="credits">
