--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
 
           <div class="col-lg-4">
             <div class="info-item d-flex align-items-center">
-              <i class="bi bi-geo-alt flex-shrink-0"></i>
+             <a href="#"><i class="fa fa-map-marker main-icon" aria-hidden="true"></i>
               <div>
                 <h3>Location</h3>
                 <p> Delhi, Delhi India</p>
@@ -294,7 +294,7 @@
 
           <div class="col-lg-4">
             <div class="info-item d-flex align-items-center">
-              <i class="bi bi-telephone flex-shrink-0"></i>
+            <i class="fa fa-phone main-icon" aria-hidden="true"></i> 
               <div>
                 <h3>Call</h3>
                 <p>+91 761 892 5569</p>
@@ -304,10 +304,10 @@
 
           <div class="col-lg-4">
             <div class="info-item d-flex align-items-center">
-              <i class="bi bi-envelope flex-shrink-0"></i>
+            <i class="fa fa-phone main-icon" aria-hidden="true"></i> 
               <div>
                 <h3>Email</h3>
-                <p>shagun@gmail.com</p>
+                <p>shagunsingh.rbj@gmail.com</p>
               </div>
             </div>
           </div>
