--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
 
           <div class="col-lg-4">
             <div class="info-item d-flex align-items-center">
-             <a href="#"><i class="fa fa-map-marker main-icon" aria-hidden="true"></i>
+             <a href="#"><i class="fa fa-map-marker main-icon" aria-hidden="true" style="color: blue;"></i>
               <div>
                 <h3>Location</h3>
                 <p> Delhi, Delhi India</p>
@@ -294,7 +294,7 @@
 
           <div class="col-lg-4">
             <div class="info-item d-flex align-items-center">
-            <i class="fa fa-phone main-icon" aria-hidden="true"></i> 
+            <i class="fa fa-phone main-icon" aria-hidden="true" style="color: blue;"></i> 
               <div>
                 <h3>Call</h3>
                 <p>+91 761 892 5569</p>
@@ -304,7 +304,7 @@
 
           <div class="col-lg-4">
             <div class="info-item d-flex align-items-center">
-            <i class="fa fa-phone main-icon" aria-hidden="true"></i> 
+            <i class="fa fa-phone main-icon" aria-hidden="true" style="color: blue;"></i> 
               <div>
                 <h3>Email</h3>
                 <p>shagunsingh.rbj@gmail.com</p>
