--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
 
           <div class="col-lg-4">
             <div class="info-item d-flex align-items-center">
-             <i class="fa fa-envelope main-icon" aria-hidden="true" style="color: blue;"></i> 
+              <i class="fa fa-envelope-o" aria-hidden="true" style="color: blue;"></i>
               <div>
                 <h3>Email</h3>
                 <p>shagunsingh.rbj@gmail.com</p>
