--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
           <div class="col-12 text-center">
             <h2 class="section-title mb-3">Contact Us</h2>
           </div>
-
+          <div class="row">
           <div class="col-lg-4">
             <div class="info-item d-flex align-items-center">
              <a href="#"><i class="fa fa-map-marker main-icon" aria-hidden="true" style="color: blue;"></i>
@@ -291,7 +291,6 @@
               </div>
             </div>
           </div>
-
           <div class="col-lg-4">
             <div class="info-item d-flex align-items-center">
             <i class="fa fa-phone main-icon" aria-hidden="true" style="color: blue;"></i> 
@@ -301,7 +300,6 @@
               </div>
             </div>
           </div>
-
           <div class="col-lg-4">
             <div class="info-item d-flex align-items-center">
               <i class="fa fa-envelope-o" aria-hidden="true" style="color: blue;"></i>
@@ -310,6 +308,7 @@
                 <p>shagunsingh.rbj@gmail.com</p>
               </div>
             </div>
+          </div>
           </div>
         </div>
       </div>
